[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/targets/target.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/targets/resources/large-computer.png" type="Texture" id=2]
[ext_resource path="res://src/targets/super-computer.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -28.8622, -6.82686, -21.7291, -13.9599, 29.9959, -13.8348, 30.1628, 6.81353, 23.6971, 13.0289, -28.9039, 13.154 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 29.4969, 13.5354 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 42.0448, 22.783 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 29.5365, 13.612 )

[node name="Super_computer" type="AnimatedSprite"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
frames = SubResource( 3 )
playing = true
script = ExtResource( 3 )

[node name="Target" parent="." instance=ExtResource( 1 )]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="colider" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="colider"]
position = Vector2( 0.524157, -0.434559 )
shape = SubResource( 6 )

[node name="heal-zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="heal-zone"]
shape = SubResource( 7 )

[node name="hit_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_zone"]
position = Vector2( 0.642221, -0.357914 )
shape = SubResource( 8 )

[connection signal="healed" from="Target" to="." method="_on_Target_healed"]
[connection signal="body_entered" from="heal-zone" to="." method="_on_healzone_body_entered"]
[connection signal="body_exited" from="heal-zone" to="." method="_on_healzone_body_exited"]
[connection signal="area_entered" from="hit_zone" to="." method="_on_hit_zone_area_entered"]
